# EmsErgani

./: Cargo.toml  E3test.txt  config.txt
src/: E3.rs  anaggelia.rs  auth_response.rs  card.rs  convert.rs  credentials.rs  http_client.rs  main.rs  overtimes.rs  working_status.rs  wto.rs
